--- a/index.html
+++ b/index.html
@@ -14,13 +14,13 @@
 
 <body>
    <div class="container-fluid">
-      <header class="row header degree px-2 sticky-top">
+      <header class="row header degree shadow px-2 sticky-top">
          <div class="col-6 d-flex align-items-center">
             <a href="#"><img class="pt-2" src="./img/logo_ayuda_cabecera.png" style="max-width: 130px;" /></a>
          </div>
          <div class="col-6 d-flex align-items-center justify-content-end">
             <a href="https://multipago.bo"><img src="./img/nuevo-logo-multipago.png"  style="max-width: 150px;" /></a>
-            <!-- <a href="https://multipago.bo"><img src="./img/multipago.svg" style="max-width: 150px;"/></a> -->
+            <a class="pl-3" href="grupopaz.com.bo/" target="_blank"><img src="./img/logo_grupopaz.png" style="max-width: 150px;"/></a>
          </div>
       </header>
       <section class="row p-0">
@@ -59,9 +59,12 @@
             <div class="col-12 col-md d-flex align-items-center justify-content-center shadow-sm bg-white rounded"
           >
             <div class="row p-2">
-              <div class="col-sm-7 p-0 pad-10">
+              <div class="col-sm-7 p-0 pad-10 position-relative">
                 <a href="https://multipago.bo/protegeunavida">
                   <img class="w-100" src="./img/slide/foto2.png" alt="" />
+                </a>
+                <a href="https://multipago.bo/protegeunavida" class="text-dark position-absolute on--white my-auto d-flex align-items-center justify-content-center">
+                  <span class="px-2 text-center">Destinado para el personal médico de hospitales públicos de Santa Cruz que no tiene la ropa adecuada e insumos que los proteja de contagiarse y contagiar el coronavirus.</span>
                 </a>
               </div>
               <div
@@ -72,7 +75,7 @@
                   <span class="font-weight-bold color text-primary">1740</span>
                   <p class="border-top mt-3 pt-2">
                     Fecha de validez <br />
-                    <span class="text-secondary">---</span>
+                    <span class="text-secondary">31/05/2020</span>
                   </p>
                 </div>
                 <a
@@ -97,9 +100,12 @@
             <div class="col-12 col-md d-flex align-items-center justify-content-center shadow-sm bg-white rounded"
           >
             <div class="row p-2">
-              <div class="col-sm-7 p-0 pad-10">
-                <a href="#">
+              <div class="col-sm-7 p-0 pad-10 position-relative">
+                <a href="https://multipago.bo/demosdecorazon">
                   <img class="w-100" src="./img/slide/foto3.png" alt="" />
+                </a>
+                <a href="https://multipago.bo/demosdecorazon" class="text-dark position-absolute on--white my-auto d-flex align-items-center justify-content-center">
+                  <span class="px-2 text-center">Destinado para la compra de víveres para el Banco de Alimentos Solidario y así atender a las familias más vulnerables de nuestra sociedad.</span>
                 </a>
               </div>
               <div
@@ -110,11 +116,11 @@
                   <span class="font-weight-bold color text-primary">1740</span>
                   <p class="border-top mt-3 pt-2">
                     Fecha de validez <br />
-                    <span class="text-secondary">---</span>
+                    <span class="text-secondary">31/05/2020</span>
                   </p>
                 </div>
                 <a
-                  href="#"
+                  href="https://multipago.bo/demosdecorazon"
                   class="position-absolute on on--hover my-auto d-flex align-items-center justify-content-center"
                 >
                   <div>
