velocidad del coso ese

--- a/index.html
+++ b/index.html
@@ -73,8 +73,8 @@
                 <div class="text-center">
                   <p class="font-weight-bold pt-4">TOTAL RECAUDADO (Bs.)</p>
                   <span class="font-weight-bold color text-primary">1740</span>
-                  <p class="border-top mt-3 pt-2">
-                    Fecha de validez <br />
+                  <p class="border-top mt-3 pt-4">
+                   Dona hasta el <br />
                     <span class="text-secondary">31/05/2020</span>
                   </p>
                 </div>
@@ -114,8 +114,8 @@
                 <div class="text-center">
                   <p class="font-weight-bold pt-4">TOTAL RECAUDADO (Bs.)</p>
                   <span class="font-weight-bold color text-primary">1740</span>
-                  <p class="border-top mt-3 pt-2">
-                    Fecha de validez <br />
+                  <p class="border-top mt-3 pt-4">
+                    Dona hasta el <br />
                     <span class="text-secondary">31/05/2020</span>
                   </p>
                 </div>
@@ -216,7 +216,7 @@
      dots: false,
      arrow: true,
      autoplay: true,
-     autoplaySpeed: 3000,
+     autoplaySpeed: 2000,
      slidesToShow: 4,
      slidesToScroll: 1,
      responsive: [
