--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
             <a href="#"><img class="pt-2" src="./img/logo_ayuda_cabecera.png" style="max-width: 150px;" /></a>
          </div>
          <div class="col-6 d-flex align-items-center justify-content-end">
-           <p class="promovido text-light pr-4 pt-3" style="font-size: 0.85rem ;">Promovido por: </p>
+           <p class="promovido text-light pr-4 pt-3g" style="font-size: 0.85rem ;">Promovido por: </p>
             <a href="https://multipago.bo"><img src="./img/nuevo-logo-multipago.png"  style="max-width: 150px;" /></a>
             <a class="pl-3" href="grupopaz.com.bo/" target="_blank"><img src="./img/logo_grupopaz.png" style="max-width: 150px;"/></a>
          </div>
@@ -65,7 +65,8 @@
                   <img class="w-100" src="./img/slide/foto2.png" alt="" />
                 </a>
                 <div class="text-dark position-absolute on--white my-auto d-flex align-items-center justify-content-center">
-                  <span class="px-2 text-center">Destinado para el personal médico de hospitales públicos de Santa Cruz que no tiene la ropa adecuada e insumos que los proteja de contagiarse y contagiar el coronavirus.</span>
+                  <span class="px-2 text-center">Destinado para el personal médico de hospitales públicos de Santa Cruz que no tiene la ropa adecuada e insumos que los proteja de contagiarse y contagiar el coronavirus. <br><strong class="mt-2 d-block">DONA <a href="https://multipago.bo/protegeunavida">AQUÍ</a></strong> </span>
+                  
                 </div>
               </div>
               <div
@@ -90,7 +91,7 @@
                       style="max-width: 40px;"
                       class="mx-auto"
                     />
-                    <p class="text-light">DONAR</p>
+                    <p class="text-light pt-3">DONAR</p>
                   </div>
                 </a>
               </div>
@@ -103,10 +104,10 @@
             <div class="row p-2">
               <div class="col-sm-7 p-0 pad-10 position-relative">
                 <a href="https://multipago.bo/demosdecorazon">
-                  <img class="w-100" src="./img/slide/foto3.png" alt="" />
+                  <img class="w-100 pt-2" src="./img/slide/foto3.png" alt="" />
                 </a>
                 <div class="text-dark position-absolute on--white my-auto d-flex align-items-center justify-content-center">
-                  <span class="px-2 text-center">Destinado para la compra de víveres para el Banco de Alimentos Solidario y así atender a las familias más vulnerables de nuestra sociedad.</span>
+                  <span class="px-2 text-center">Destinado para la compra de víveres para el Banco de Alimentos Solidario y así atender a las familias más vulnerables de nuestra sociedad. <br><strong class="mt-2 d-block">DONA <a href="https://multipago.bo/demosdecorazon">AQUÍ</a></strong> </span>
                 </div>
               </div>
               <div
@@ -131,7 +132,7 @@
                       style="max-width: 40px;"
                       class="mx-auto"
                     />
-                    <p class="text-light">DONAR</p>
+                    <p class="text-light pt-3">DONAR</p>
                   </div>
                 </a>
               </div>
