--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
             <a href="#"><img class="pt-2" src="./img/logo_ayuda_cabecera.png" style="max-width: 150px;" /></a>
          </div>
          <div class="col-6 d-flex align-items-center justify-content-end">
-           <p class="promovido text-light pr-4 pt-3g" style="font-size: 0.85rem ;">Promovido por: </p>
+           <p class="promovido text-light pr-4 pt-3" style="font-size: 0.85rem ;">Promovido por: </p>
             <a href="https://multipago.bo"><img src="./img/nuevo-logo-multipago.png"  style="max-width: 150px;" /></a>
             <a class="pl-3" href="grupopaz.com.bo/" target="_blank"><img src="./img/logo_grupopaz.png" style="max-width: 150px;"/></a>
          </div>
@@ -209,7 +209,7 @@
    <script src="./js/bootstrap.min.js" />
    </script>
    <script src="./js/popper.min.js"></script>
-   <script type="text/javascript" src="//cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.min.js"></script>
+   <script type="text/javascript" src="./js/slick.min.js"></script>
    <script>
      $('.multiple-items').slick({
      dots: true,
