nueva empresa para donaciones

--- a/index.html
+++ b/index.html
@@ -169,6 +169,41 @@
               </div>
             </div>
           </div>
+          <div class="col-lg-4 col-md-6 mx-auto mt-1 mb-5 mx-3">
+            <div class="col-12 col-md d-flex align-items-center justify-content-center shadow-sm bg-white rounded">
+              <div class="row p-2">
+                <div class="col-sm-7 p-0 pad-10 position-relative">
+                  <a href="https://multipago.bo/campaniasolidaria">
+                    <img class="w-100 pt-2" src="./img/slide/foto4.png" alt="" />
+                  </a>
+                  <div
+                    class="text-dark position-absolute on--white my-auto d-flex align-items-center justify-content-center">
+                    <span class="px-2 text-center"> <br><strong
+                        class="mt-2 d-block">DONA <a style="color: #10CBE9"
+                          href="#">AQUÍ</a></strong> </span>
+                  </div>
+                </div>
+                <div
+                  class="mMovil col-12 col-sm-5 d-flex align-items-center justify-content-center ayuda_enlace position-relative">
+                  <div class="text-center">
+                    <p class="font-weight-bold pt-4">TOTAL RECAUDADO (Bs.)</p>
+                    <span class="ayudaRecaudado font-weight-bold color text-primary">0</span>
+                    <p class="border-top mt-3 pt-4">
+                      Dona hasta el <br />
+                      <span class="text-secondary">31/05/2020</span>
+                    </p>
+                  </div>
+                  <a href="https://multipago.bo/campaniasolidaria"
+                    class="position-absolute on on--hover my-auto d-flex align-items-center justify-content-center">
+                    <div>
+                      <img src="./img/isologo_banner.png" alt="" style="max-width: 40px;" class="mx-auto" />
+                      <p class="text-light pt-3">DONAR</p>
+                    </div>
+                  </a>
+                </div>
+              </div>
+            </div>
+          </div>
         </div>
       </div>
 
@@ -220,6 +255,9 @@
                   </div>
                   <div class="col-lg-4 col-md-6">
                     <img class="img-fluid" src="./img/apoyan/empresa8.png">
+                  </div>
+                  <div class="col-lg-4 col-md-6">
+                    <img class="img-fluid" src="./img/apoyan/empresa9.png">
                   </div>
                 </div>
 
