nueva empresa para donaciones con texto

--- a/index.html
+++ b/index.html
@@ -178,7 +178,7 @@
                   </a>
                   <div
                     class="text-dark position-absolute on--white my-auto d-flex align-items-center justify-content-center">
-                    <span class="px-2 text-center"> <br><strong
+                    <span class="px-2 text-center"> Destinado a la compra de víveres a las familias más necesitadas<br><strong
                         class="mt-2 d-block">DONA <a style="color: #10CBE9"
                           href="#">AQUÍ</a></strong> </span>
                   </div>
@@ -193,7 +193,7 @@
                       <span class="text-secondary">31/05/2020</span>
                     </p>
                   </div>
-                  <a href="https://multipago.bo/campaniasolidaria"
+                  <a href="#"
                     class="position-absolute on on--hover my-auto d-flex align-items-center justify-content-center">
                     <div>
                       <img src="./img/isologo_banner.png" alt="" style="max-width: 40px;" class="mx-auto" />
